--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,8 @@
     text-decoration: none;
     list-style-type: none;
     box-sizing: border-box;
+    padding-inline: 0;
+    padding-block: 0;
     font-family: "DM Sans", sans-serif;
 
 }
