about page completed and scss partials added

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -3,6 +3,7 @@
 
 // About
 @import url(./partials/about/_aboutCompany.scss);
+@import url(./partials/about/_ourTeam.scss);
 @import url(./partials/about/_aboutFeatures.scss);
 
 // Font family
