--- a/src/scss/partials/about/_aboutCompany.scss
+++ b/src/scss/partials/about/_aboutCompany.scss
@@ -29,12 +29,14 @@
 .about-preferencess {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
     justify-content: space-between;
 
     .about-block {
         width: 32%;
         padding: 40px 50px;
         box-shadow: 0 16px 32px 0 rgba(0, 0, 0, .04);
+        margin: 20px 0;
         border: 1px solid #fff;
         border-radius: 10px;
         transform: translate(0, 80px);
@@ -65,6 +67,13 @@
                     margin: 15px 0;
                 }
             }
+        }
+    }
+
+    .about-preferencess {
+        .about-block {
+            width: 100%;
+            padding: 30px;
         }
     }
 }
