--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,10 +1,19 @@
-// Partials
+// Home
 @import url(./partials/home/_arrivals.scss);
+
+// Wishlist and Cart
+@import url(./partials/wishlist/_wishlist.scss);
 
 // About
 @import url(./partials/about/_aboutCompany.scss);
 @import url(./partials/about/_ourTeam.scss);
 @import url(./partials/about/_aboutFeatures.scss);
+
+// Blog
+@import url(./partials/blog/_blog.scss);
+
+// Contact  
+@import url(./partials/contact/_contact.scss);
 
 // Font family
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100;0,9..40,200;0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700;0,9..40,800;0,9..40,900;0,9..40,1000;1,9..40,100;1,9..40,200;1,9..40,300;1,9..40,400;1,9..40,500;1,9..40,600;1,9..40,700;1,9..40,800;1,9..40,900;1,9..40,1000&display=swap");
