--- a/src/scss/partials/contact/_contact.scss
+++ b/src/scss/partials/contact/_contact.scss
@@ -1,8 +1,87 @@
 .contact-box {
+    display: flex;
+    flex-wrap: wrap;
     padding: 30px 0;
+
+    .left-side {
+        width: 65%;
+    }
+
+    .right-side {
+        width: 35%;
+    }
 
     .main-head {
         font-size: 30px;
-        //color: #282828;
+        font-weight: 500;
+        color: #282828;
+        padding: 15px 0;
+    }
+
+    .contact-text {
+        color: #777777;
+        padding: 16px 0;
+    }
+
+    .contact-form {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+
+        label {
+            color: #777777;
+
+            span {
+                &:nth-child(2) {
+                    color: red;
+                }
+            }
+        }
+
+        .form-group {
+            width: 32%;
+
+            &.form-item {
+                width: 100%;
+            }
+
+            .form-control {
+                width: 100%;
+                padding: 20px 25px;
+                border: 1px solid #CBD3D9;
+                border-radius: 8px;
+                transition: .3s linear;
+
+                &:focus-within {
+                    outline: none;
+                    border-color: #3577f0;
+                }
+            }
+        }
+
+    }
+
+    .company-info {
+        li {
+            font-size: 15px;
+            padding: 15px 0;
+            color: #777777;
+            font-weight: 500;
+
+            a {
+                color: inherit;
+            }
+        }
+    }
+
+    .company-location {
+        width: 100%;
+        padding: 20px 0;
+        iframe {
+            width: 100%;
+            height: 500px;
+            border: none;
+            border-radius: 8px;
+        }
     }
 }
