--- a/src/scss/partials/products/_productDetail.scss
+++ b/src/scss/partials/products/_productDetail.scss
@@ -297,9 +297,12 @@
     padding: 20px 0 20px 20px;
 }
 
-.form-group .form-item.form-textarea {
-    width: 100%;
-    padding: 20px;
+.form-group {
+    textarea {
+        width: 100%;
+        padding: 20px;
+        resize: none;
+    }
 }
 
 @media only screen and (max-width: 991px) {
