--- a/src/scss/partials/contact/_contact.scss
+++ b/src/scss/partials/contact/_contact.scss
@@ -77,11 +77,33 @@
     .company-location {
         width: 100%;
         padding: 20px 0;
+
         iframe {
             width: 100%;
             height: 500px;
             border: none;
             border-radius: 8px;
         }
+    }
+}
+
+@media only screen and (max-width: 992px) {
+    .contact-box {
+
+        .left-side,
+        .right-side {
+            width: 100%;
+        }
+
+        .contact-form {
+            .form-group {
+                width: 100%;
+            }
+        }
+    }
+
+    .btn-blue {
+        padding: 15px 10px;
+        font-size: 14px;
     }
 }
