--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -13,7 +13,10 @@
 @import url(./partials/about/_aboutFeatures.scss);
 
 // Products
-@import url(./partials/products/productDetail.scss);
+@import url(./partials/products/_productDetail.scss);
+
+// Profile
+@import url(./partials/profile/_profile.scss);
 
 // Blog
 @import url(./partials/blog/_blog.scss);
