--- a/src/scss/App.css
+++ b/src/scss/App.css
@@ -7,6 +7,8 @@
 @import url(./partials/products/_productDetail.scss);
 @import url(./partials/blog/_blog.scss);
 @import url(./partials/contact/_contact.scss);
+@import url(./partials/profile/_profile.scss);
+@import url(./partials/profile/_dashboard.scss);
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100;0,9..40,200;0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700;0,9..40,800;0,9..40,900;0,9..40,1000;1,9..40,100;1,9..40,200;1,9..40,300;1,9..40,400;1,9..40,500;1,9..40,600;1,9..40,700;1,9..40,800;1,9..40,900;1,9..40,1000&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@100..800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100..900;1,100..900&display=swap");
@@ -672,6 +674,13 @@ button.btn-inc,
   }
   .btn-close {
     display: flex;
+  }
+  .left-side, .right-side {
+    width: 100% !important;
+  }
+  .btn-blue {
+    padding: 15px;
+    font-size: 14px;
   }
   .head-box {
     color: #fff;
