--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -21,6 +21,10 @@
 // Contact  
 @import url(./partials/contact/_contact.scss);
 
+// Profile
+@import url(./partials/profile/_profile.scss);
+@import url(./partials/profile/_dashboard.scss);
+
 // Font family
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100;0,9..40,200;0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700;0,9..40,800;0,9..40,900;0,9..40,1000;1,9..40,100;1,9..40,200;1,9..40,300;1,9..40,400;1,9..40,500;1,9..40,600;1,9..40,700;1,9..40,800;1,9..40,900;1,9..40,1000&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@100..800&display=swap");
@@ -710,7 +714,14 @@ button.btn-inc,
     .btn-close {
         display: flex;
     }
+    .left-side, .right-side {
+        width: 100% !important;
+    }
 
+    .btn-blue {
+        padding: 15px;
+        font-size: 14px;
+    }
     .head-box {
         color: #fff;
         padding: 0 10px;
