--- a/src/scss/partials/blog/_blog.scss
+++ b/src/scss/partials/blog/_blog.scss
@@ -4,6 +4,14 @@
     gap: 16px;
     padding: 80px 0;
 
+    .blog-list-item {
+        border-left: 6px solid #FAB8C4;
+        background-color: #f9f3f0;
+        border-radius: 10px;
+        padding: 50px 40px 30px;
+        margin: 50px 0;
+    }
+
     .left-side {
         width: 65%;
     }
@@ -25,10 +33,20 @@
         font-size: 25px;
         color: #292930;
         padding: 20px 0;
+
+        a {
+            color: inherit;
+            transition: .5s linear;
+
+            &:hover {
+                color: #3577f0;
+            }
+        }
     }
 
     .blog-grid-item {
-        margin-bottom: 40px;
+        border-top: 1px solid #f3f3f3;
+        padding: 45px 0;
     }
 
     .post-auth {
@@ -53,6 +71,12 @@
                 font-size: 18px;
                 font-weight: 500;
                 margin: 5px 0;
+                cursor: pointer;
+                transition: .5s linear;
+
+                &:hover {
+                    color: #3577f0;
+                }
             }
 
             .post-date {
