--- a/src/scss/partials/blog/_blog.scss
+++ b/src/scss/partials/blog/_blog.scss
@@ -1,16 +1,76 @@
+.blog-title {
+    font-weight: 500;
+    font-size: 25px;
+    color: #292930;
+    padding: 20px 0;
+
+    a {
+        color: inherit;
+        transition: .5s linear;
+
+        &:hover {
+            color: #3577f0;
+        }
+    }
+}
+
+.blog-list-item {
+    border-left: 6px solid #FAB8C4;
+    background-color: #f9f3f0;
+    border-radius: 10px;
+    padding: 50px 40px 30px;
+    margin: 50px 0;
+
+    .btn-blue {
+        margin: 30px 0 0;
+    }
+}
+
+.post-auth {
+    display: flex;
+    border-bottom: 1px solid #c2c2cc;
+    padding: 20px 0 30px 0;
+
+    .auth-img {
+        min-width: 50px;
+        min-height: 50px;
+        width: 50px;
+        border-radius: 50%;
+        margin-right: 15px;
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+        }
+    }
+
+    .post-info {
+        .auth-name {
+            font-size: 18px;
+            font-weight: 500;
+            margin: 5px 0;
+            cursor: pointer;
+            transition: .5s linear;
+
+            &:hover {
+                color: #3577f0;
+            }
+        }
+
+        .post-date {
+            color: #777777;
+            font-size: 13px;
+            font-weight: 500;
+        }
+    }
+}
+
 .blog-box {
     display: flex;
     flex-wrap: wrap;
     gap: 16px;
     padding: 80px 0;
-
-    .blog-list-item {
-        border-left: 6px solid #FAB8C4;
-        background-color: #f9f3f0;
-        border-radius: 10px;
-        padding: 50px 40px 30px;
-        margin: 50px 0;
-    }
 
     .left-side {
         width: 65%;
@@ -28,64 +88,9 @@
         }
     }
 
-    .blog-title {
-        font-weight: 500;
-        font-size: 25px;
-        color: #292930;
-        padding: 20px 0;
-
-        a {
-            color: inherit;
-            transition: .5s linear;
-
-            &:hover {
-                color: #3577f0;
-            }
-        }
-    }
-
     .blog-grid-item {
         border-top: 1px solid #f3f3f3;
         padding: 45px 0;
-    }
-
-    .post-auth {
-        display: flex;
-        padding: 15px 0;
-
-        .auth-img {
-            min-width: 50px;
-            min-height: 50px;
-            width: 50px;
-            border-radius: 50%;
-            margin-right: 15px;
-
-            img {
-                width: 100%;
-                height: 100%;
-                object-fit: contain;
-            }
-        }
-
-        .post-info {
-            .auth-name {
-                font-size: 18px;
-                font-weight: 500;
-                margin: 5px 0;
-                cursor: pointer;
-                transition: .5s linear;
-
-                &:hover {
-                    color: #3577f0;
-                }
-            }
-
-            .post-date {
-                color: #777777;
-                font-size: 13px;
-                font-weight: 500;
-            }
-        }
     }
 
     .post-body {
